--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="">Hello world</h1>
+    <h1 style="color:blue
+">Hello world</h1>
 </body>
 </html>
